@@ -57,10 +57,13 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <spark.version>2.4.0</spark.version>
-    <spark.core.artifactid>spark-core_2.11</spark.core.artifactid>
-    <spark.sql.artifactid>spark-sql_2.11</spark.sql.artifactid>
-    <htsjdk.version>2.9.1</htsjdk.version>
+    <scala.main>2.12</scala.main>
+    <spark.version>3.0.1</spark.version>
+    <spark.core.artifactid>spark-core_${scala.main}</spark.core.artifactid>
+    <spark.sql.artifactid>spark-sql_${scala.main}</spark.sql.artifactid>
+    <spark.exclude.packages>org.genomicsdb.spark.v2</spark.exclude.packages>
+    <spark.exclude.files>**/org/genomicsdb/spark/v2/**.java</spark.exclude.files>
+    <htsjdk.version>2.23.0</htsjdk.version>
     <json.simple.version>[1.1.1,)</json.simple.version>
     <log4j.version>[2.13.0,)</log4j.version>
     <protobuf.version>3.0.2</protobuf.version>
@@ -89,6 +92,12 @@
       <groupId>org.apache.spark</groupId>
       <artifactId>${spark.sql.artifactid}</artifactId>
       <version>${spark.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.protobuf</groupId>
+          <artifactId>protobuf-java</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>com.github.samtools</groupId>
@@ -154,28 +163,34 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
-          <version>1.8</version>
+          <version>3.2.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
-
+    
     <plugins>
       <plugin>
         <inherited>true</inherited>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.0</version>
+        <version>3.8.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
           <compilerArgs>
             <arg>-Xlint</arg>
           </compilerArgs>
+          <excludes>
+            <exclude>${spark.exclude.files}</exclude>
+          </excludes>
+          <testExcludes>
+            <testExclude>${spark.exclude.files}</testExclude>
+          </testExcludes>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.8</version>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <id>unzip-test-artifacts</id>
@@ -202,7 +217,7 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.5</version>
+        <version>0.8.6</version>
         <executions>
           <!--
             Prepares the property pointing to the JaCoCo runtime agent which
@@ -261,12 +276,12 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.2.0</version>
+        <version>4.4.0</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
-        <version>2.2.1</version>
+        <version>3.2.1</version>
         <executions>
           <execution>
             <id>attach-sources</id>
@@ -279,7 +294,7 @@
       <plugin> 
         <groupId>org.apache.maven.plugins</groupId> 
         <artifactId>maven-shade-plugin</artifactId>  
-        <version>3.2.1</version> 
+        <version>3.2.4</version> 
         <executions> 
           <execution> 
             <phase>package</phase> 
@@ -331,7 +346,7 @@
       <plugin>
         <groupId>org.scalatest</groupId>
         <artifactId>scalatest-maven-plugin</artifactId>
-        <version>1.0</version>
+        <version>2.0.2</version>
         <configuration>
           <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
           <junitxml>.</junitxml>
@@ -342,17 +357,18 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
+        <version>3.2.0</version>
         <configuration>
           <show>private</show>
           <nohelp>true</nohelp>
           <source>8</source>
+          <excludePackageNames>${spark.exclude.packages}</excludePackageNames>
           <sourceFileExcludes>
-            <exclude>**/Coordinates.java</exclude>
-            <exclude>**/GenomicsDBVidMapProto.java</exclude>
-            <exclude>**/GenomicsDBCallsetsMapProto.java</exclude>
-            <exclude>**/GenomicsDBImportConfiguration.java</exclude>
-            <exclude>**/GenomicsDBExportConfiguration.java</exclude>
+            <sourceFileExclude>**/Coordinates.java</sourceFileExclude>
+            <sourceFileExclude>**/GenomicsDBVidMapProto.java</sourceFileExclude>
+            <sourceFileExclude>**/GenomicsDBCallsetsMapProto.java</sourceFileExclude>
+            <sourceFileExclude>**/GenomicsDBImportConfiguration.java</sourceFileExclude>
+            <sourceFileExclude>**/GenomicsDBExportConfiguration.java</sourceFileExclude>
           </sourceFileExcludes>
         </configuration>
         <executions>
@@ -378,7 +394,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-gpg-plugin</artifactId>
-        <version>1.5</version>
+        <version>1.6</version>
         <executions>
           <execution>
             <id>sign-artifacts</id>
@@ -389,28 +405,11 @@
             </execution>
         </executions>
       </plugin>
-    </plugins>
-  </build>
-
-  <profiles>
-    <profile>
-      <id>spark_core-2.10</id>
-      <properties>
-        <spark.core.artifactid>spark_core_2.10</spark.core.artifactid>
-      </properties>
-    </profile>
-    <profile>
-      <id>default_profile</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
-      <build>
-        <plugins>
-          <!--Protobuf generation - adapted from http://vlkan.com/blog/post/2015/11/27/maven-protobuf/-->
-          <plugin>
+      <!-- previously in default profile, moving out to avoid duplicating for spark2 profile -->
+      <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-antrun-plugin</artifactId>
-            <version>1.8</version>
+            <version>3.0.0</version>
             <executions>
               <execution>
                 <id>exec-protoc</id>
@@ -460,8 +459,25 @@
               </execution>
             </executions>
           </plugin>
-        </plugins>
-      </build>
+
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>java11</id>
+      <properties>
+        <java.version>11</java.version>
+        <surefireArgLine>--illegal-access=permit -Djava.library.path=${project.basedir}/bin:${java.library.path}</surefireArgLine>
+      </properties>
+      </profile>  
+    <profile>
+      <id>spark2</id>
+      <properties>
+        <scala.main>2.11</scala.main>
+        <spark.version>2.4.0</spark.version>
+        <spark.exclude.packages>org.genomicsdb.spark.sources</spark.exclude.packages>
+        <spark.exclude.files>**/org/genomicsdb/spark/sources/*.java</spark.exclude.files>
+      </properties>  
     </profile>
   </profiles>
 </project>
